- Fix squashing image on mobile - Fix close icon on drop detail dialog for profile page - Remove link from card title - Adjust video display for cards

--- a/src/components/ImgModal/imgModal.css
+++ b/src/components/ImgModal/imgModal.css
@@ -49,6 +49,7 @@
 
 .img-el img{
     height: 100%;
+    object-fit: contain;
 }
 
 .full-img-cont img{
